[gd_scene load_steps=16 format=3 uid="uid://cyv8vf7k1e1s4"]

[ext_resource type="Script" uid="uid://bfgk648834pnk" path="res://Scenes/TrainingProgram/parts/Cards/ResearcherMiniCard/researcher_mini_card.gd" id="1_ni348"]
[ext_resource type="PackedScene" uid="uid://cggkdkq5crbw4" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardBody.tscn" id="3_qyov1"]
[ext_resource type="PackedScene" uid="uid://b51r528fxi561" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerTitle.tscn" id="4_2d0eq"]
[ext_resource type="PackedScene" uid="uid://b38bvj8mti387" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerImage.tscn" id="4_816jx"]
[ext_resource type="PackedScene" uid="uid://dmxs2kvip2i80" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardStatus.tscn" id="5_816jx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ol8ek"]

[sub_resource type="ViewportTexture" id="ViewportTexture_2d0eq"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_ah3g8"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ah3g8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ssgu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ssgu"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.931198, 0, 0.462987, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2d0eq"]
bg_color = Color(1, 0.74902, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
shadow_color = Color(0, 0, 0, 0.580392)
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_816jx"]
bg_color = Color(1, 0.74902, 0.2, 1)
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.580392)
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ah3g8"]
bg_color = Color(1, 0.74902, 0.2, 1)
corner_radius_bottom_right = 5
shadow_color = Color(0, 0, 0, 0.580392)
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8x5y6"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ResearcherMiniCard" type="PanelContainer"]
modulate = Color(1, 1, 1, 0.6)
custom_minimum_size = Vector2(200, 150)
offset_right = 175.0
offset_bottom = 175.0
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ol8ek")
script = ExtResource("1_ni348")

[node name="CardTextureRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("ViewportTexture_2d0eq")
stretch_mode = 4

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(200, 175)

[node name="CardBody" parent="SubViewport" instance=ExtResource("3_qyov1")]
card_size = Vector2(200, 175)
border_color = Color(0, 0, 0, 1)

[node name="TextureRect" parent="SubViewport/CardBody" index="0"]
texture = SubResource("ViewportTexture_ah3g8")

[node name="SubViewport" parent="SubViewport/CardBody" index="1"]
size = Vector2i(200, 175)

[node name="CardBody" parent="SubViewport/CardBody/SubViewport/Control" index="0"]
custom_minimum_size = Vector2(200, 175)
offset_right = 200.0
offset_bottom = 175.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ah3g8")

[node name="Front" parent="SubViewport/CardBody/SubViewport/Control/CardBody" index="0"]
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="PanelContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front" index="0"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_8ssgu")

[node name="MarginContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer" index="0"]
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="FrontDrawerContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer" index="0"]
theme_override_constants/separation = 0

[node name="Spec" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="0" instance=ExtResource("4_2d0eq")]
visible = false
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8ssgu")
is_small = true
content = "Researcher Name"
center_text = true
title = "SPECIALIZATION"
border_color = Color(0.931198, 0, 0.462987, 1)

[node name="CardDrawerImage" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="1" instance=ExtResource("4_816jx")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2d0eq")
title = ""
is_left_side = true

[node name="Status" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer/CardDrawerImage" instance=ExtResource("5_816jx")]
layout_mode = 2
title = "STATUS"
v_offset = 40

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer/CardDrawerImage"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="Lvl" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer/CardDrawerImage/HBoxContainer" instance=ExtResource("4_2d0eq")]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_816jx")
content = "0"
center_text = true
title = "LVL"
border_color = Color(0.821379, 0.0352417, 0.41483, 1)

[node name="Name" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer/CardDrawerImage/HBoxContainer" instance=ExtResource("4_2d0eq")]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ah3g8")
is_small = true
center_text = true
title = ""
border_color = Color(0.821379, 0.0352417, 0.41483, 1)

[node name="PanelContainer" parent="SubViewport/CardBody/SubViewport/Control/CardBody/Back" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_8x5y6")

[editable path="SubViewport/CardBody"]
